--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: clojure
 lein: lein2
-script: lein2 doo phantom test once 
+before_script: lein2 clean
+script: lein2 doo phantom test once
