--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: clojure
 lein: lein2
-before_script: lein2 clean
+before_script: lein2 -v && phantomjs -v && lein2 clean
 script: lein2 test!
