Remove unneeded sudo so we use Travis' new infrastructure.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: clojure
 jdk:
   - oraclejdk8
 lein: lein2
-sudo: required
+sudo: false
 before_script: lein2 clean
 script: lein2 test!
 branches:
