--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ jdk:
 lein: lein2
 sudo: false
 before_script:
-  - "export JAVA_OPTS=-Xmx512m"
-  - "echo $JAVA_OPTS"
+  - export JAVA_OPTS="-Xms512m -Xmx1024m"
+  - echo $JAVA_OPTS
   - lein2 clean
 script: lein2 test!
 cache:
