--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: clojure
 jdk:
-  - oraclejdk7
+  - oraclejdk8
 lein: lein2
-sudo: false
+sudo: true
 before_script:
   - export JAVA_OPTS="-Xms1024m -Xmx2048m"
   - echo $JAVA_OPTS
