--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - lein2 clean
 script:
   - lein2 test-navigation!
-  - lein2 test-report!
+  - lein2 test-company!
   - lein2 test-ui-components!
 cache:
   directories:
