add commented out kibit setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: clojure
 jdk:
   - oraclejdk8
-lein: lein2
 sudo: true
 before_install:    
   - wget https://s3.amazonaws.com/travis-phantomjs/phantomjs-2.0.0-ubuntu-12.04.tar.bz2    
@@ -9,19 +8,13 @@ before_install:
   - sudo rm -rf /usr/local/phantomjs/bin/phantomjs   
   - sudo mv phantomjs /usr/local/phantomjs/bin/phantomjs
   - sudo bash -c "cd /usr/local/bin && curl -fsSLo boot https://github.com/boot-clj/boot-bin/releases/download/latest/boot.sh && chmod 755 boot"
-  # - gem install sass
 before_script:
   - export BOOT_JVM_OPTIONS="-Xms256m -Xmx2048m"
   - echo $BOOT_JVM_OPTIONS
-  # - lein2 clean
-  # - chmod +x script/sass-test.rb
 script:
   - boot test!
-  # - lein2 test-navigation!
-  # - lein2 test-company!
-  # - lein2 test-ui-components!
-  # - lein2 kibit
-  # - "script/sass-test.rb"
+  # currently disabled because of https://github.com/tolitius/boot-check/issues/2
+  # - boot check/with-kibit
 cache:
   directories:
   - "$HOME/.m2"
